--- a/A2 site/aboutus.html
+++ b/A2 site/aboutus.html
@@ -41,6 +41,18 @@
 <!-- InstanceBeginEditable name="content" -->
 
 <p></p>
+<button class="faqbutton" value="Show" onclick="this.value=this.value=='Show'?'Hide':'Show';">FAQ</button>
+<div class="faq">
+<!-- 
+use a button for every question that hides the answers?
+maybe can remove the FAQ button then.
+-->
+<div>
+	Q: How many tropical fish can I have?<br>
+	A: The often stated general rule of thumb (don't stock your tank using this rule!) is 1 inch of fish per gallon of water. Remember to use the future adult size of your fish when computing the total inches of fish you can have.<br>
+	Q: Can I use tap water to fill my tank?
+</div>
+</div>
 <!-- InstanceEndEditable -->
 </body>
 <footer>
