--- a/A2 site/events.html
+++ b/A2 site/events.html
@@ -39,8 +39,56 @@
 </nav>
 	
 <!-- InstanceBeginEditable name="content" -->
-
-<p></p>
+<table align="center">
+  <tr>
+    <th>Event</th>
+    <th>Date</th>
+  </tr>
+  <tr>
+    <td>Landscaping competition</td>
+    <td>30th November 2017</td>
+  </tr>
+  <tr>
+    <td>Fish Forum</td>
+    <td>5th October 2017</td>
+  </tr>
+  <tr>
+    <td>Fish exhibition</td>
+    <td>15th December 2017</td>
+  </tr>
+  <tr>
+    <td>Landscape &amp; Koi Pond exhibition</td>
+    <td>6th June 2017</td>
+  </tr>
+  <tr>
+    <td>Vet consultation service - FREE</td>
+    <td>15th November 2017</td>
+  </tr>
+  <tr>
+    <td>Puppies fashion show</td>
+    <td>1st January 2018</td>
+  </tr>
+  <tr>
+    <td>Pets fashion show</td>
+    <td>19th January 2018</td>
+  </tr>
+  <tr>
+    <td>Pets grooming services</td>
+    <td>8th August 2017</td>
+  </tr>
+  <tr>
+    <td>Puppy show with Animal Planet</td>
+    <td>20th August 2017</td>
+  </tr>
+  <tr>
+    <td>Pets grooming competition</td>
+    <td>9th December 2017</td>
+  </tr>
+  <tr>
+    <td>Special event with dog whisperer</td>
+    <td>20th September 2017</td>
+  </tr>
+</table>
 <!-- InstanceEndEditable -->
 </body>
 <footer>
