--- a/A2 site/aboutus.html
+++ b/A2 site/aboutus.html
@@ -13,7 +13,7 @@
 
 <body>
  <div id="headertitle">
-  <p><img src="images/Fish-Tastic logo.png" width="400" height="" alt="fishtastic logo"/></p>
+  <p><img src="images/Fish-Tastic%20logo.png" width="400" height="" alt="fishtastic logo"/></p>
  </div>
 <nav id="navigation">
 	<ul>
@@ -39,19 +39,51 @@
 </nav>
 	
 <!-- InstanceBeginEditable name="content" -->
-
-<p></p>
-<button class="faqbutton" value="Show" onclick="this.value=this.value=='Show'?'Hide':'Show';">FAQ</button>
-<div class="faq">
-<!-- 
-use a button for every question that hides the answers?
-maybe can remove the FAQ button then.
--->
 <div>
-	Q: How many tropical fish can I have?<br>
-	A: The often stated general rule of thumb (don't stock your tank using this rule!) is 1 inch of fish per gallon of water. Remember to use the future adult size of your fish when computing the total inches of fish you can have.<br>
-	Q: Can I use tap water to fill my tank?
+	<h1>About us</h1>
+	<p>FISH~TASTIC was founded in 2013 by Mr K.H.Chan, also the co-sponsor of Singapore Sea Aquarium. FISH~TASTIC sells a variety of fishes with prices ranging from affordable to luxurious. FISH~TASTIC also carries products such as accessories and fish foods of many well-known brands, e.g Hikari, Tropical, and Rio. In 2014, FISH~TASTIC was awarded Top Asia Enterprise 2014 and Singapore’s Outstanding Enterprise 2014, nominated by members of the public for our excellence in service, products and social responsibility. For that, we are thankful for the recognition.</p>
+	<p>We have trading partners worldwide, whom we have business dealings with in countries all over the world. We continue to explore and look for trading partners in other parts of the world, so as to acquire more products to develop our farm into a one-stop shopping paradise for all fish lovers.</p>
+	<p>Come and visit our store to make your marine aquarium beautiful and pristine. We are here to share our knowledge and make your hobby as easy as possible. We believe that it is truly a privilege to be able to look at a part of the ocean everyday. </p>
+	<p>If you have any questions, please feel free to <a href="contactus.html">contact us</a> by phone or email.</p>
+	<h1>Company Mission</h1>
+	<p>To diversify the delights and pleasure of fishkeeping to the society</p>
+	<h1>Company Vision</h1>
+	<p>To be the number one fish aquarium in the global market</p>
 </div>
+<div id="faq">
+	<h1>FAQ</h1>
+<button class="question" value="Show" onclick="this.value=this.value=='Show'?'Hide':'Show';">How many tropical fish can I have?</button>
+<div class="answer"><div>
+	The often stated general rule of thumb (don't stock your tank using this rule!) is 1 inch of fish per gallon of water. Remember to use the future adult size of your fish when computing the total inches of fish you can have.
+</div></div>
+<button class="question" value="Show" onclick="this.value=this.value=='Show'?'Hide':'Show';">Can I use tap water to fill my tank?</button>
+<div class="answer"><div>
+	Maybe - first for chlorine and/or chloramines. Most likely you will have these chemicals in your water and you will need to remove or neutralize them before adding water to your tank.
+</div></div>
+<button class="question" value="Show" onclick="this.value=this.value=='Show'?'Hide':'Show';">How often should I change the water?</button>
+<div class="answer"><div>
+	It depends on how many fish you have and the quality of your filtration system. In lightly stocked tanks, I would recommend changing 10 percent of the water once a week.
+</div></div>
+<button class="question" value="Show" onclick="this.value=this.value=='Show'?'Hide':'Show';">How often should I feed my tropical fish?</button>
+<div class="answer"><div>
+	It is best to give your fish two or three small feedings per day. Only give an amount of food that the fish can eat in 2 minutes or less.
+</div></div>
+<button class="question" value="Show" onclick="this.value=this.value=='Show'?'Hide':'Show';">What are some good tropical fish for beginners?</button>
+<div class="answer"><div>
+	There are a few species that are particularly hardy and that can tolerate some of the mistakes that a beginner may make.<!-- WTF? what species then -.- -->
+</div></div>
+<button class="question" value="Show" onclick="this.value=this.value=='Show'?'Hide':'Show';">Help, I can't find my fish! Where is it?</button>
+<div class="answer"><div>
+	Some fish do jump out, especially when there is no hood or it is not properly secured. Look all around the tank, including behind it. Another place to look is inside the filter. Smaller fish can easily get into the filter's intake tube and it will often, unfortunately, kill them.
+</div></div>
+<button class="question" value="Show" onclick="this.value=this.value=='Show'?'Hide':'Show';">What should the fish tank temperature be set at?</button>
+<div class="answer"><div>
+	The aquarium water temperature depends on the fish species in question. Different species require different temperatures. Generally speaking, for tropical fish a good temperature range would be anywhere from 72 °F to 78 °F (22 °C to 26 °C).
+</div></div>
+<button class="question" value="Show" onclick="this.value=this.value=='Show'?'Hide':'Show';">Can I leave my aquarium lights on 24 hours?</button>
+<div class="answer"><div>
+	Your fish need some "down time" just like you do. Sure, they don't crawl under the covers and go to sleep, but they do hunker down in a quiet place and rest at night.
+</div></div>
 </div>
 <!-- InstanceEndEditable -->
 </body>
