--- a/A2 site/events.html
+++ b/A2 site/events.html
@@ -13,7 +13,7 @@
 
 <body>
  <div id="headertitle">
-  <p><img src="images/Fish-Tastic logo.png" width="400" height="" alt="fishtastic logo"/></p>
+  <p><img src="images/Fish-Tastic%20logo.png" width="400" height="" alt="fishtastic logo"/></p>
  </div>
 <nav id="navigation">
 	<ul>
