--- a/A2 site/aboutus.html
+++ b/A2 site/aboutus.html
@@ -3,55 +3,71 @@
 <head>
 <meta charset="utf-8">
 <!-- InstanceBeginEditable name="doctitle" -->
-<title>Untitled Document</title>
+<title>About Us - FishTastic</title>
 <!-- InstanceEndEditable -->
 <link href="css/mastercss.css" rel="stylesheet" type="text/css">
-<link href="css/contentscss.css" rel="stylesheet" type="text/css">
+<link href="css/content.css" rel="stylesheet" type="text/css">
 <!-- InstanceBeginEditable name="head" -->
 <!-- InstanceEndEditable -->
 </head>
 
 <body>
- <div id="headertitle">
-  <p><img src="images/Fish-Tastic%20logo.png" width="400" height="" alt="fishtastic logo"/></p>
- </div>
-<nav id="navigation">
-	<ul>
-		<li><a href="index.html">Home</a></li>
-		<li><a href="aboutus.html">Fish-Tastic?!</a>
-			<ul>
-				<li><a href="aboutus.html#faq">FAQ</a></li>
-			</ul>
-		</li>
-		<li><a href="products.html">Product</a>
-			<ul>
-				<li><a href="products.html#fish">Fish</a></li>
-				<li><a href="products.html#fishfood">Fish food</a></li>
-				<li><a href="products.html#equipment">Equipment</a></li>
-			</ul>
-		</li>
-		<li><a href="events.html">Events</a></li>
-		<li><a href="orderform.html">Order Now</a></li>
-		<li><a href="services.html">Services</a></li>
-		<li><a href="announcements.html">Announcements</a></li>
-		<li><a href="contactus.html">Contact Us</a></li>
-	</ul>
-</nav>
+<div id="navigation">
+	<div id="headertitle">
+  	<img src="images/Fish-Tastic%20logo.png" width="400" height="" alt="fishtastic logo"/>
+		</div>
+	<nav>
+		<ul>
+			<li><a href="index.html">Home</a></li>
+			<li><a href="aboutus.html">Fish-Tastic?!</a>
+				<ul>
+					<li>About Us</li>
+					<li><a href="aboutus.html#faq">FAQ</a></li>
+				</ul>
+			</li>
+			<li><a href="products.html">Product</a>
+				<ul>
+					<li><a href="products.html#fish">Fish</a></li>
+					<li><a href="products.html#fishfood">Fish food</a></li>
+					<li><a href="products.html#equipment">Equipment</a></li>
+				</ul>
+			</li>
+			<li><a href="orderform.html">Order Now</a></li>
+			<li><a href="services.html">Services</a></li>
+			<li><a href="announcements.html">Announcements</a>
+				<ul>
+				<li><a href="events.html">Event List</a></li>
+				</ul>
+			</li>
+			<li><a href="contactus.html">Contact Us</a></li>
+		</ul>
+	</nav>
+</div>
+	
 	
 <!-- InstanceBeginEditable name="content" -->
-<div>
-	<h1>About us</h1>
-	<p>FISH~TASTIC was founded in 2013 by Mr K.H.Chan, also the co-sponsor of Singapore Sea Aquarium. FISH~TASTIC sells a variety of fishes with prices ranging from affordable to luxurious. FISH~TASTIC also carries products such as accessories and fish foods of many well-known brands, e.g Hikari, Tropical, and Rio. In 2014, FISH~TASTIC was awarded Top Asia Enterprise 2014 and Singapore’s Outstanding Enterprise 2014, nominated by members of the public for our excellence in service, products and social responsibility. For that, we are thankful for the recognition.</p>
-	<p>We have trading partners worldwide, whom we have business dealings with in countries all over the world. We continue to explore and look for trading partners in other parts of the world, so as to acquire more products to develop our farm into a one-stop shopping paradise for all fish lovers.</p>
-	<p>Come and visit our store to make your marine aquarium beautiful and pristine. We are here to share our knowledge and make your hobby as easy as possible. We believe that it is truly a privilege to be able to look at a part of the ocean everyday. </p>
-	<p>If you have any questions, please feel free to <a href="contactus.html">contact us</a> by phone or email.</p>
-	<h1>Company Mission</h1>
+<div id="aboutusbg">
+<div id="aboutus">
+	<h1>What is Fish-Tastic?!</h1>
+	<div class="box firstblue"><p>Founded in 2013 by Mr K.H.Chan, the co-sponsor of Singapore Sea Aquarium.</p> </div>
+	
+	<div class="box secondblue"><p>FISH~TASTIC sells a variety of fishes with prices ranging from affordable to luxurious. We also carries products such as accessories and fish foods of many well-known brands, <br>such as Hikari, Tropical, and Rio.</p> <p>We have trading partners worldwide, whom we have business dealings with in countries all over the world. We continue to explore and look for trading partners in other parts of the world, so as to acquire more products to develop our farm into a one-stop shopping paradise for all fish lovers.</p></div> 
+	
+	<div class="box thridblue"><p>Come and visit our store to make your marine aquarium beautiful and pristine. We are here to share our knowledge and make your hobby as easy as possible. We believe that it is truly a privilege to be able to look at a part of the ocean everyday.</p> 
+	<p>If you have any questions, please feel free to <a href="contactus.html">contact us</a> by phone or email.</p></div>
+	
+	<div class="box fourthblue"><h2>Awards</h2><p>Top Asia Enterprise 2014 and Singapore’s Outstanding Enterprise 2014 </p><p>We were nominated by members of the public for our excellence in service, products and social responsibility. We are thankful for the recognition.</p></div>
+	
+	<div class="box fifthblue"><h2>Company Mission</h2>
 	<p>To diversify the delights and pleasure of fishkeeping to the society</p>
-	<h1>Company Vision</h1>
-	<p>To be the number one fish aquarium in the global market</p>
+	<h2>Company Vision</h2>
+	<p>To be the number one fish aquarium in the global market</p></div>
 </div>
+</div>
+
+<div id="faqbq">
 <div id="faq">
-	<h1>FAQ</h1>
+  <h1>FAQ</h1>
 <button class="question" value="Show" onclick="this.value=this.value=='Show'?'Hide':'Show';">How many tropical fish can I have?</button>
 <div class="answer"><div>
 	The often stated general rule of thumb (don't stock your tank using this rule!) is 1 inch of fish per gallon of water. Remember to use the future adult size of your fish when computing the total inches of fish you can have.
@@ -84,6 +100,7 @@
 <div class="answer"><div>
 	Your fish need some "down time" just like you do. Sure, they don't crawl under the covers and go to sleep, but they do hunker down in a quiet place and rest at night.
 </div></div>
+</div>
 </div>
 <!-- InstanceEndEditable -->
 </body>
