add parts in plan

--- a/plan.html
+++ b/plan.html
@@ -28,13 +28,26 @@
 <p>The purpose of this website is to introduce both new and existing customers to the new branch of their company (pet shop and landscape/pond classes) and promote their current business of selling fish supplies while increasing sales.</p>
 <h2>Success Evaluation</h2>
 <p>The success of the website will be evaluated through the increase in sales and new customers for the business over a 3 month period. Other forms of advertisement currently in use will be kept constant and at the end of this period the rate of increase will be compared to the 3 months before this website is launched to determine if this website was successful.</p>
-<p> It is successful when it has been shown that the website has made a significant impact on the business and its sales revenue and has contributed towards increasing the customer base.</p>
+<p>The website is successful when it shows a significant impact in the business through the sales revenue and its contribution towards increasing the customer base.</p>
+<p>In measurement, the website is said to be success if number of order increases by at least 15% and the number of customer increases by at least 10%.</p>
 <h2>Target Audience</h2>
-<p>Our target audience are those who want pets, specifically, fish and current owners of pets.</p>
+<p>Our target audience are those who want pets, specifically, fish and current owners of pets. It also includes the pet lovers which can be people in any age range.</p>
+<p>To be specific, this website targets for people in age range of 25~40years old.</p>
 <p>The website will be kept professional and scannable as the majority of customers should be working class adults perhaps buying pets or supplies for their kids or as gifts to friends and family, thus they will want to be able to browse quickly and efficiently. </p>
 <p>Pets and products will also come with pictures alongside their names to give a clear idea of what the user is purchasing as adults tend to be skeptical when it comes to online ordering and navigation will be kept simple and clean for easy page browsing.</p>
 <h2>Content</h2>
-<p>...</p>
+	<ul>
+		<li>Homepage</li>
+		<li>About Us</li>
+		<li>FAQ</li>
+		<li>Products (include sub heads for type of product)</li>
+		<li>Order form</li>
+		<li>Services (include the shipping info)</li>
+		<li>Announcement (include the new business info)</li>
+		<li>Event List</li>
+		<li>Contact Us</li>
+		<li>Feedback form</li>
+	</ul>
 <h2>Site Flowchart</h2>
 <p> ...</p>
 <h2>GitHub</h2>
