--- a/plan.html
+++ b/plan.html
@@ -36,7 +36,7 @@
 <h2>Content</h2>
 <p>...</p>
 <h2>Site Flowchart</h2>
-<p> ...</p>
+<p><img src="A2Flowchart.jpg" alt="Flowchart"></p>
 <h2>GitHub</h2>
 <a href="http://github.com/?" target="_blank">GitHub repository</a>
 <h2>Comps</h2>
