--- a/A2 site/announcements.html
+++ b/A2 site/announcements.html
@@ -36,7 +36,7 @@
 			<li><a href="services.html">Services</a></li>
 			<li><a href="announcements.html">Announcements</a>
 				<ul>
-				<li><a href="events.html">Event List</a></li>
+				<li><a href="announcements.html#events">Event List</a></li>
 				</ul>
 			</li>
 			<li><a href="contactus.html">Contact Us</a></li>
@@ -48,6 +48,56 @@
 <!-- InstanceBeginEditable name="content" -->
 
 <p></p>
+<table align="center" id="events">
+  <tr>
+    <th>Event</th>
+    <th>Date</th>
+  </tr>
+  <tr>
+    <td>Landscaping competition</td>
+    <td>30th November 2017</td>
+  </tr>
+  <tr>
+    <td>Fish Forum</td>
+    <td>5th October 2017</td>
+  </tr>
+  <tr>
+    <td>Fish exhibition</td>
+    <td>15th December 2017</td>
+  </tr>
+  <tr>
+    <td>Landscape &amp; Koi Pond exhibition</td>
+    <td>6th June 2017</td>
+  </tr>
+  <tr>
+    <td>Vet consultation service - FREE</td>
+    <td>15th November 2017</td>
+  </tr>
+  <tr>
+    <td>Puppies fashion show</td>
+    <td>1st January 2018</td>
+  </tr>
+  <tr>
+    <td>Pets fashion show</td>
+    <td>19th January 2018</td>
+  </tr>
+  <tr>
+    <td>Pets grooming services</td>
+    <td>8th August 2017</td>
+  </tr>
+  <tr>
+    <td>Puppy show with Animal Planet</td>
+    <td>20th August 2017</td>
+  </tr>
+  <tr>
+    <td>Pets grooming competition</td>
+    <td>9th December 2017</td>
+  </tr>
+  <tr>
+    <td>Special event with dog whisperer</td>
+    <td>20th September 2017</td>
+  </tr>
+</table>
 <!-- InstanceEndEditable -->
 </body>
 <footer>
