--- a/A2 site/orderform.html
+++ b/A2 site/orderform.html
@@ -36,7 +36,7 @@
 			<li><a href="services.html">Services</a></li>
 			<li><a href="announcements.html">Announcements</a>
 				<ul>
-				<li><a href="events.html">Event List</a></li>
+				<li><a href="announcements.html#events">Event List</a></li>
 				</ul>
 			</li>
 			<li><a href="contactus.html">Contact Us</a></li>
