added index template

--- a/A2 site/products.html
+++ b/A2 site/products.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8">
 <!-- InstanceBeginEditable name="doctitle" -->
-<title>Untitled Document</title>
+<title>Product - FishTastic</title>
 <!-- InstanceEndEditable -->
 <link href="css/mastercss.css" rel="stylesheet" type="text/css">
 <link href="css/content.css" rel="stylesheet" type="text/css">
@@ -46,8 +46,9 @@
 	
 	
 <!-- InstanceBeginEditable name="content" -->
-
-<p></p>
+<div class="content" id="fishproduct">
+	<h1>Product</h1>
+</div>
 <!-- InstanceEndEditable -->
 </body>
 <footer>
