--- a/A2 site/products.html
+++ b/A2 site/products.html
@@ -48,6 +48,39 @@
 <!-- InstanceBeginEditable name="content" -->
 <div class="content" id="fishproduct">
 	<h1>Product</h1>
+	<div class="fish">
+		<h2>Freshwater Fish:</h2>
+		<img src="" alt="Guppy" onClick="alert('hello')">
+		<img src="" alt="Fantail Goldfish">
+		<img src="" alt="Oranda Goldfish">
+		<img src="" alt="Neon Tetra">
+		<h2>Saltwater Fish:</h2>
+		<img src="" alt="Clown Fish">
+		<img src="" alt="Butterfly Fish">
+		<img src="" alt="Angel Fish">
+		<img src="" alt="Dory Fish">
+	</div>
+	<div class="fishfood">
+		<h2>Fish Food:</h2>
+		<img src="" alt="Tropical Flakes">
+		<img src="" alt="Algae Wafers">
+		<img src="" alt="Bloodworms">
+	</div>
+	<div class="equipment">
+		<h2>Fish Tanks:</h2>
+		<img src="" alt="Regular">
+		<img src="" alt="Premium">
+		<img src="" alt="Brandy Glass Fish Bowl">
+		<img src="" alt="600 Rio Water Pump">
+		<h2>Medications:</h2>
+		<img src="" alt="Medicinal food(HEX Shield)">
+		<img src="" alt="Wonder Shell">
+		<img src="" alt="API Pro series(general cure)">
+		<h2>Decorations:</h2>
+		<img src="" alt="Artificial Water Plant">
+		<img src="" alt="Artificial Corals">
+		<img src="" alt="Ceramic Castle House">
+	</div>
 </div>
 <!-- InstanceEndEditable -->
 </body>
