--- a/plan.html
+++ b/plan.html
@@ -51,7 +51,7 @@
 <h2>Site Flowchart</h2>
 <p><img src="A2Flowchart.jpg" alt="Flowchart"></p>
 <h2>GitHub</h2>
-<a href="http://github.com/?" target="_blank">GitHub repository</a>
+<a href="https://github.com/stevaniehuang/CP1406_Assignment2" target="_blank">GitHub repository</a>
 <h2>Comps</h2>
 <p>provide links here to your 2 comps (images or Web pages)</p>
 <ul>
