added the comps to plan.html

--- a/plan.html
+++ b/plan.html
@@ -50,13 +50,17 @@
 	</ul>
 <h2>Site Flowchart</h2>
 <p><img src="A2Flowchart.jpg" alt="Flowchart"></p>
-<h2>GitHub</h2>
-<a href="http://github.com/?" target="_blank">GitHub repository</a>
+<h2>GitHub</h2><a href="https://github.com/stevaniehuang/CP1406_Assignment2">GitHub repository</a></a>
 <h2>Comps</h2>
 <p>provide links here to your 2 comps (images or Web pages)</p>
+<p>we have come up with some designs template in image form</p>
 <ul>
-    <li>...</li>
-    <li>...</li>
+    <li>For homepage <br><img src="doc1.jpg" width="700" height="" alt="firstdesign"/><br><img src="doc2.jpg" width="700" height="" alt="seconddesign"/></li>
+    <li>For content - mainly navigation bar <br>
+    <img src="doc3.jpg" width="700" height="" alt=thirddesign""/><br>
+    <img src="doc4.jpg" width="700" height="" alt="fourthdesign"/></li>
+    <li>Text based design with its style <br>
+    <img src="doc5.jpg" width="700" height="" alt="fifthdesign"/></li>
 </ul>
 <h2>Developed Pages</h2>
 <p>provide a link here to your developed pages</p>
