add margin between li in plan

--- a/plan.html
+++ b/plan.html
@@ -17,6 +17,10 @@
             margin-top: 1.5em;
             margin-bottom: 0.5em;
         }
+		
+		li{
+			margin: 1em;
+		}
     </style>
 </head>
 
@@ -57,7 +61,7 @@
 <ul>
     <li>For homepage <br><img src="doc1.jpg" width="700" height="" alt="firstdesign"/><br><img src="doc2.jpg" width="700" height="" alt="seconddesign"/></li>
     <li>For content - mainly navigation bar <br>
-    <img src="doc3.jpg" width="700" height="" alt=thirddesign""/><br>
+    <img src="doc3.jpg" width="700" height="" alt=thirddesign""><br>
     <img src="doc4.jpg" width="700" height="" alt="fourthdesign"/></li>
     <li>Text based design with its style <br>
     <img src="doc5.jpg" width="700" height="" alt="fifthdesign"/></li>
