--- a/A2 site/products.html
+++ b/A2 site/products.html
@@ -47,7 +47,21 @@
 	
 <!-- InstanceBeginEditable name="content" -->
 <div class="content" id="fishproduct">
-	<h1>Product</h1>
+	<div class="box firstblue">
+	  <h1>Product</h1></div>
+	
+	<div class="box secondblue">
+		<h2>Fish</h2>
+		
+	</div>
+	
+	<div class="box thridblue">
+  	<h2>Fish Food</h2>
+  	
+  	</div>
+	
+  	<div class="box fourthblue">
+  		<h2>Equipment</h2></div>
 </div>
 <!-- InstanceEndEditable -->
 </body>
