--- a/A2 site/aboutus.html
+++ b/A2 site/aboutus.html
@@ -53,7 +53,7 @@
 	
 	<div class="box secondblue"><p>FISH~TASTIC sells a variety of fishes with prices ranging from affordable to luxurious. We also carries products such as accessories and fish foods of many well-known brands, <br>such as Hikari, Tropical, and Rio.</p> <p>We have trading partners worldwide, whom we have business dealings with in countries all over the world. We continue to explore and look for trading partners in other parts of the world, so as to acquire more products to develop our farm into a one-stop shopping paradise for all fish lovers.</p></div> 
 	
-	<div class="box thridblue"><p>Come and visit our store to make your marine aquarium beautiful and pristine. We are here to share our knowledge and make your hobby as easy as possible. We believe that it is truly a privilege to be able to look at a part of the ocean everyday.</p> 
+	<div class="box thirdblue"><p>Come and visit our store to make your marine aquarium beautiful and pristine. We are here to share our knowledge and make your hobby as easy as possible. We believe that it is truly a privilege to be able to look at a part of the ocean everyday.</p> 
 	<p>If you have any questions, please feel free to <a href="contactus.html">contact us</a> by phone or email.</p></div>
 	
 	<div class="box fourthblue"><h2>Awards</h2><p>Top Asia Enterprise 2014 and Singapore’s Outstanding Enterprise 2014 </p><p>We were nominated by members of the public for our excellence in service, products and social responsibility. We are thankful for the recognition.</p></div>
