--- a/A2 site/products.html
+++ b/A2 site/products.html
@@ -50,18 +50,260 @@
 	<div class="box firstblue">
 	  <h1>Product</h1></div>
 	
-	<div class="box secondblue">
+	<div class="box secondblue" id="fish">
 		<h2>Fish</h2>
-		
+		<h3>Freshwater fish</h3>
+		<table>
+			<tbody>
+				<tr>
+					<th></th>
+					<th>Guppy</th>
+					<th>Fantail Goldfish</th>
+					<th>Oranda Goldfish</th>
+					<th>Neon Tetra</th>
+				</tr>
+				<tr>
+					<th>Description</th>
+					<td>Guppy also known as millionfish, is a small colourful species of freshwater tropical fish. It is one of the most popular types of aquarium tropical fish in the world and generally lives for 2 to 4 years.</td>
+					<td>Fantail Goldfish is one of the captive-bred fancy goldfish varieties. It does not grow as large as other types of goldfish, which grows up to 6 inches.</td>
+					<td>Oranda Goldfish is also known as Tigerhead or Tiger Goldfish. It is one of the egg-shaped variety goldfish. It can grow up to 8 to 12 inches in length.</td>
+					<td>Tetra is one of the most well known and popular freshwater tropical fish. Neon tetra is the most commonly bred commercial species of tetra out of all its species.</td>
+				</tr>
+				<tr>
+					<th>Living Environment</th>
+					<td>Baby guppies should be separated from the older guppies. Guppy should be kept in a tank with other very small fish to prevent them from being eaten.</td>
+					<td>It is best kept in cold water. The tank that it is being kept in should be have open areas with heavily planted areas. It should be kept with a few other goldfishes.</td>
+					<td>As it grows, increase the tank size. Proper filtering is needed as they create a lot of waste. The filter should completely clean the water at least 10 times per hour. <br>The tank that it is being kept in should be have open areas with heavily planted areas. It should be kept with a few other goldfishes.</td>
+					<td>It is easy to keep as it has the ability to endure difficult conditions. It live in schools of many tetra individuals, sometimes hundred in order to help find food and protect one another. Tetra should be kept with at least 6 to 7 other tetra in tanks.</td>
+				</tr>
+				<tr>
+					<th>Diet</th>
+					<td>It is an omnivorous animal and eats a wide range of organic matter that is available in the water, mainly algae and brine shrimp. It also often eat particles of food from the water that have been left by the larger fishes.</td>
+					<td>It is omnivorous and they generally eat all kinds of fresh, frozen and flake food. It is important to adjust the amount of food given at certain temperature at any given time.</td>
+					<td>It is omnivorous and they generally eat all kinds of fresh, frozen and flake food.</td>
+					<td>It is an omnivorous animal eating a mixture of both plant and animal matter. It primarily feeds on algae, brine shrimp and the larger food particles that are part of the plankton in the water.</td>
+				</tr>
+				<tr>
+					<th>Breeding</th>
+					<td>After mating just once with a male guppy, the female guppy is able to give birth numerous times. Guppy gives birth to live young where the eggs are it is incubated and hatched inside the female guppy. Female guppy can give birth up to 100 baby guppies.</td>
+					<td>It should be well fed on a varied diet to get them in spawning condition. The temperature in the tank should be lowered for a period of time to stimulate seasons to get them to breed. Slowly increase the temperature after they have been kept in cold water for a month.</td>
+					<td>It is difficult for oranda goldfish to mate outside breeding season. During the breeding season, the head of the male oranda goldfish will become covered with white dots, known as breeding tubercles. Lowering the temperature before gradually raising the temperature can helps trigger spawning.</td>
+					<td>It breed in pairs that spawn together for about a year.The female tetra lay an average of 130 eggs usually on a leaf in the water which are then fertilised by the male tetra. The eggs are then hatched within a couple of days.</td>
+				</tr>
+				<tr>
+					<th>Price / fish</th>
+					<td>$0.80</td>
+					<td>$1.00</td>
+					<td>$1.30</td>
+					<td>$0.80</td>
+				</tr>
+			</tbody>
+		</table>
+		<h3>Saltwater fish</h3>
+		<table>
+			<tbody>
+				<tr>
+					<th></th>
+					<th>Clown Fish</th>
+					<th>Butterfly Fish</th>
+					<th>Angel Fish</th>
+					<th>Dory Fish</th>
+				</tr>
+				<tr>
+					<th>Description</th>
+					<td>Clown fish are found around tropical coral reefs.</td>
+					<td>Butterfly fish is a salt-water species of fish that are found primarily around coral reefs. It is active in the day and resting in the night.<br>An average butterfly fish is fairly small and generally grows up to around 4 to 5 inches in length. It can live up till around 8 to 10 years.</td>
+					<td>With their bright colours and deep, laterally compressed bodies, marine angelfishes are some of the more conspicuous residents of the reef.</td>
+					<td>The Dory Fish which belongs to the tang species, is a small to medium sized fish that is found in the warmer coastal waters of the tropics. Tangs are well know for their bright colours and are closely related to surgeon fish and unicorn fish.</td>
+				</tr>
+				<tr>
+					<th>Living Environment</th>
+					<td>It is found either in or around sea anemone which is use as protection and food.</td>
+					<td>It is difficult to keep as they need specific water conditions that need regular and close monitoring.</td>
+					<td>Most marine angelfishes restrict themselves to the shallows of the reef, seldom venturing deeper than 50 m (160 ft).</td>
+					<td>It is found around shallow coral reefs where there is an abundance of food and plenty of places to hide from approaching predators</td>
+				</tr>
+				<tr>
+					<th>Diet</th>
+					<td>It is omnivorous and eat a wide range of food such as algae and plankton.</td>
+					<td>It mostly feed on coral, sea anemones, plankton in the water, and occasionally snack on small crustaceans.</td>
+					<td>Feeding habits can be strictly defined through genus, with Genicanthus species feeding onzooplanktonand Centropyge preferring filamentous algae.</td>
+					<td>Predominantly vegetarian diet. Feed on algae and other plants around the coral reef.</td>
+				</tr>
+				<tr>
+					<th>Breeding</th>
+					<td>The female clown fish lay their eggs on a flat surface close to the sea anemone they inhabit in. Depending on the species, it can lay hundreds or thousands of eggs at one time. It lay its eggs around the same time as the full moon. the male clown fish guards the eggs until it hatch just over a week later.</td>
+					<td>It will form mating pairs that will remain for life. Its eggs are released into the water which form part of the plankton, which is accidentally eaten by animals that live on plankton.</td>
+					<td>Angelfish reproduce sexually: a male and female engage in brief periods of courtship, which ultimately result in the fertilization of eggs. Angelfish males are quite territorial and defend their territories dutifully, leaving only to mate with females during the spring breeding season.</td><!--https://www.reference.com/pets-animals/angelfish-reproduce-41d66475108ed553 -->
+					<td>Tangs are known to breed all year round in the tropical regions, beginning with a male tang securing himself a temporary breeding territory that includes a pair or group of female tang.</td>
+				</tr>
+				<tr>
+					<th>Price / fish</th>
+					<td>$31.40</td>
+					<td>$32.00</td>
+					<td>$70.00</td>
+					<td>$30.00</td>
+				</tr>
+			</tbody>
+		</table>
 	</div>
 	
-	<div class="box thridblue">
-  	<h2>Fish Food</h2>
-  	
+	<div class="box thirdblue" id="fishfood">
+  		<h2>Fish Food</h2>
+  		<table>
+  			<tbody>
+  				<tr>
+  					<th></th>
+  					<th>Tropical Flakes</th>
+  					<th>Algae Wafers</th>
+  					<th>Bloodworms</th>
+  				</tr>
+  				<tr>
+  					<th>Description</th>
+  					<td>These flakes are specially formulated for your Tetras, Angelfish, Discus, Barbs, Guppies and other tropical fish. The food contains garlic to boost your fish's immune system. This Aquarium Pharmaceuticals Tropical Flake Food offers wholesome nutrition for your fish. The marigold and carrot blend enhances natural colors in your fish. The food contains garlic to boost your fishes' immune systems.</td>
+  					<td>Offers complete and balanced nutrition for superior growth and improved health.<br>Contains higher levels of spirulina and vegetable matter plecostomus and other algae eaters prefer<br>The uniquely shaped disc won't dissolve readily or cloud water<br>The "original algae wafer"- Easy and convenient to use<br>Rich in necessary vitamins and nutrients, including stabilized vitamin C to reduce stress related disease</td>
+  					<td>Bloodworms Freshwater Fish Food contains natural Red Mosquito Larvae packed with nutrition. Freshwater aquarium fish love the additional variety frozen fish foods add to their diet. Since these Frozen Bloodworms Freshwater Fish Foods have not been heat processed, they retain all their natural vitamins and other essential nutrients.</td>
+  				</tr>
+  				<tr>
+  					<th>Price</th>
+  					<td>$6.50</td>
+  					<td>$11.90</td>
+  					<td>$2.99</td>
+  				</tr>
+  			</tbody>
+  		</table>
   	</div>
 	
-  	<div class="box fourthblue">
-  		<h2>Equipment</h2></div>
+  	<div class="box fourthblue"  id="equipment">
+  		<h2>Equipment</h2>
+  		<h3>Fish Tanks</h3>
+  		<table class="fishtanks">
+  			<tbody>
+  				<tr>
+  					<th></th>
+  					<th>Regular Fish Tank</th>
+  					<th>Premium Fish Tank</th>
+  					<th>Brandy Glass Fish Bowl</th>
+  					<th>600 Rio Water Pump</th>
+  				</tr>
+  				<tr>
+  					<th>Description</th>
+  					<td><ul>
+						<li>1.5ft x 1.5ft x 1.5ft Tank, 8mm thickness</li>
+						<li>Standard overflow box</li>
+						<li>Cabinet</li>
+						<li>Open top hood</li>
+						<li>2 compartment sump tank</li>
+					</ul></td>
+					<td><ul>
+						<li>30 Gallon Capacity</li>
+						<li>Ultra Thick 8mm High Clarity Glass/Low Iron</li>
+						<li>Leveling Rubber Mat</li>
+						<li>DIMS (36” x 15” x 13”)</li>
+						<li>Display DIMS (36” x 11” x 13”)</li>
+						<li>Flat Polished</li>
+						<li>Diamond Edge Polished</li>
+						<li>Black Silicone</li>
+					</ul></td>
+					<td><ul>
+						<li>4mm Glass thickness</li>
+						<li>17.5cm diameter ( across rim), 24cm max dia x 29 cm high (including base)</li>
+						<li>Moulded Glass Aquarium ideal for fish</li>
+						<li>Can also be used as a decorative vase for table centrepieces filled with floating candles, decorative stones and/or flowers</li>
+					</ul></td>
+					<td><ul>
+						<li>9.5 Watts</li>
+						<li>Flow Rate @ 0 feet Head Pressure; 200 gph/ 760 lph</li>
+						<li>Flow Rate @ 2 feet Head Pressure; 120 gph/ 456 lph</li>
+						<li>Maximum Head Pressure; 4 ft. 122 cm</li>
+						<li>Can be used as a power head with impeller housing screen detached</li>
+						<li>Size= 2.5 in x 1.7 in x 2.3 in</li>
+						<li>Includes a very durable impeller</li>
+					</ul></td>
+  				</tr>
+  				<tr>
+  					<th>Price</th>
+  					<td>$680.00</td>
+  					<td>$349.00</td>
+  					<td>$39.99</td>
+  					<td>$18.99</td>
+  				</tr>
+  			</tbody>
+  		</table>
+  		<h3>Medications</h3>
+  		<table class="medications">
+  			<tbody>
+  				<tr>
+  					<th></th>
+  					<th>Hex Shield 125g</th>
+  					<th>Wonder Shell</th>
+  					<th>API Pro Series: General Cure</th>
+  				</tr>
+  				<tr>
+  					<th>Description</th>
+  					<td>Highly palatable medicated food delivers treatment where it is needed most to effectively combat intestinal parasites. New Life Spectrum HEX SHIELD Sinking Pellets treat and prevent a variety of wasting diseases caused by aquarium intestinal parasites. Whole Antarctic krill is the first ingredient to ensure eager consumption of this treatment against flagellates and organisms that cause intestinal disorders such as Hexamita and Spironucleus.</td>
+  					<td><ul>
+  						<li>Aids in Chlorine removal & helps keep aquarium clear.</li>
+						<li>- Excellent for use with Goldfish, Livebearers, Cichlids, and more.</li>
+						<li>-These mineral blocks can help cure scoliosis in fish such as Guppies or even Bettas when lack of minerals is the cause.</li>
+						<li>Each shell oxygenates, aerates and aids in neutralizing harmful acids resulting from normal bio processes. This makes the small Wonder Shell an Excellent Choice for Betta Bowls</li>
+						<li>(especially when combined with Pillow Moss, Peat,Indian Almond Leaf Extracts, or Driftwood pieces).</li>
+						<li>Comes in small, medium, large</li>
+  					</ul></td>
+  					<td><ul>
+  						<li>10 powder packets for 10 gallons each</li>
+						<li>Alternative treatment for Clout, with less fish stress (especially for delicate fish), although not quite as strong</li>
+						<li>General Cure Anti-Parasitic Fish Medication treats a wide variety of parasitic diseases</li>
+						<li>For Both Freshwater & Saltwater</li>
+  					</ul></td>
+  				</tr>
+  				<tr>
+  					<th>Price</th>
+  					<td>$43.00</td>
+  					<td>$1.99 - $3.99</td>
+  					<td>$8.99</td>
+  				</tr>
+  			</tbody>
+  		</table>
+  		<h3>Decorations</h3>
+  		<table class="decorations">
+  			<tbody>
+  				<tr>
+  					<th></th>
+  					<th>Artificial Water Plant</th>
+  					<th>Artificial Corals</th>
+  					<th>Ceramic Castle House</th>
+  				</tr>
+  				<tr>
+  					<th>Description</th>
+  					<td><ul>
+  						<li>Giant Red/Green Hygrophila</li>
+						<li>Plastic, 22 inch long</li>
+						<li>Extra Thick Foliage</li>
+						<li>Heavy, weighted base</li>
+						<li>Remove base to float on top of the water</li>
+  					</ul></td>
+  					<td><ul>
+  						<li>Plastic</li>
+						<li>Comes in different colors ( pink, red, green, purple)</li>
+						<li>Synthetic</li>
+						<li>Suitable for all water type</li>
+  					</ul></td>
+  					<td><ul>
+  						<li>A unique 10&#34; Long by 7&#34; tall ceramic castle aquarium ornament</li>
+						<li>Has a spinning water wheel and an opening roof (air pump required to produce bubbles to spin the power wheel; not included).</li>
+						<li>This ceramic ornament makes a great addition to anyone who seeks a unique aquariums</li>
+  					</ul></td>
+  				</tr>
+  				<tr>
+  					<th>Price</th>
+  					<td>$17.99</td>
+  					<td>$3.00</td>
+  					<td>$14.99</td>
+  				</tr>
+  			</tbody>
+  		</table>
+  	</div>
 </div>
 <!-- InstanceEndEditable -->
 </body>
