change a bit of navigation and styling in product.html

--- a/A2 site/products.html
+++ b/A2 site/products.html
@@ -28,7 +28,7 @@
 			<li><a href="products.html">Product</a>
 				<ul>
 					<li><a href="products.html#fish">Fish</a></li>
-					<li><a href="products.html#fishfood">Fish food</a></li>
+					<li><a href="products.html#fishfood">Fish Supplies</a></li>
 					<li><a href="products.html#equipment">Equipment</a></li>
 				</ul>
 			</li>
@@ -46,7 +46,8 @@
 	
 	
 <!-- InstanceBeginEditable name="content" -->
-<div class="content" id="fishproduct">
+<div id="fishproduct">
+	<div id="fishproducttransparent">
 	<div class="box firstblue">
 	  <h1>Product</h1></div>
 	
@@ -149,7 +150,8 @@
 	</div>
 	
 	<div class="box thirdblue" id="fishfood">
-  		<h2>Fish Food</h2>
+  		<h2>Fish Supplies</h2>
+  		<h3>Fish Food</h3>
   		<table>
   			<tbody>
   				<tr>
@@ -169,6 +171,42 @@
   					<td>$6.50</td>
   					<td>$11.90</td>
   					<td>$2.99</td>
+  				</tr>
+  			</tbody>
+  		</table>
+  		<h3>Medications</h3>
+  		<table class="medications">
+  			
+  			<tbody>
+  				<tr>
+  					<th></th>
+  					<th>Hex Shield 125g</th>
+  					<th>Wonder Shell</th>
+  					<th>API Pro Series: General Cure</th>
+  				</tr>
+  				<tr>
+  					<th>Description</th>
+  					<td>Highly palatable medicated food delivers treatment where it is needed most to effectively combat intestinal parasites. New Life Spectrum HEX SHIELD Sinking Pellets treat and prevent a variety of wasting diseases caused by aquarium intestinal parasites. Whole Antarctic krill is the first ingredient to ensure eager consumption of this treatment against flagellates and organisms that cause intestinal disorders such as Hexamita and Spironucleus.</td>
+  					<td><ul>
+  						<li>Aids in Chlorine removal & helps keep aquarium clear.</li>
+						<li>- Excellent for use with Goldfish, Livebearers, Cichlids, and more.</li>
+						<li>-These mineral blocks can help cure scoliosis in fish such as Guppies or even Bettas when lack of minerals is the cause.</li>
+						<li>Each shell oxygenates, aerates and aids in neutralizing harmful acids resulting from normal bio processes. This makes the small Wonder Shell an Excellent Choice for Betta Bowls</li>
+						<li>(especially when combined with Pillow Moss, Peat,Indian Almond Leaf Extracts, or Driftwood pieces).</li>
+						<li>Comes in small, medium, large</li>
+  					</ul></td>
+  					<td><ul>
+  						<li>10 powder packets for 10 gallons each</li>
+						<li>Alternative treatment for Clout, with less fish stress (especially for delicate fish), although not quite as strong</li>
+						<li>General Cure Anti-Parasitic Fish Medication treats a wide variety of parasitic diseases</li>
+						<li>For Both Freshwater & Saltwater</li>
+  					</ul></td>
+  				</tr>
+  				<tr>
+  					<th>Price</th>
+  					<td>$43.00</td>
+  					<td>$1.99 - $3.99</td>
+  					<td>$8.99</td>
   				</tr>
   			</tbody>
   		</table>
@@ -229,42 +267,7 @@
   					<td>$18.99</td>
   				</tr>
   			</tbody>
-  		</table>
-  		<h3>Medications</h3>
-  		<table class="medications">
-  			<tbody>
-  				<tr>
-  					<th></th>
-  					<th>Hex Shield 125g</th>
-  					<th>Wonder Shell</th>
-  					<th>API Pro Series: General Cure</th>
-  				</tr>
-  				<tr>
-  					<th>Description</th>
-  					<td>Highly palatable medicated food delivers treatment where it is needed most to effectively combat intestinal parasites. New Life Spectrum HEX SHIELD Sinking Pellets treat and prevent a variety of wasting diseases caused by aquarium intestinal parasites. Whole Antarctic krill is the first ingredient to ensure eager consumption of this treatment against flagellates and organisms that cause intestinal disorders such as Hexamita and Spironucleus.</td>
-  					<td><ul>
-  						<li>Aids in Chlorine removal & helps keep aquarium clear.</li>
-						<li>- Excellent for use with Goldfish, Livebearers, Cichlids, and more.</li>
-						<li>-These mineral blocks can help cure scoliosis in fish such as Guppies or even Bettas when lack of minerals is the cause.</li>
-						<li>Each shell oxygenates, aerates and aids in neutralizing harmful acids resulting from normal bio processes. This makes the small Wonder Shell an Excellent Choice for Betta Bowls</li>
-						<li>(especially when combined with Pillow Moss, Peat,Indian Almond Leaf Extracts, or Driftwood pieces).</li>
-						<li>Comes in small, medium, large</li>
-  					</ul></td>
-  					<td><ul>
-  						<li>10 powder packets for 10 gallons each</li>
-						<li>Alternative treatment for Clout, with less fish stress (especially for delicate fish), although not quite as strong</li>
-						<li>General Cure Anti-Parasitic Fish Medication treats a wide variety of parasitic diseases</li>
-						<li>For Both Freshwater & Saltwater</li>
-  					</ul></td>
-  				</tr>
-  				<tr>
-  					<th>Price</th>
-  					<td>$43.00</td>
-  					<td>$1.99 - $3.99</td>
-  					<td>$8.99</td>
-  				</tr>
-  			</tbody>
-  		</table>
+		</table>
   		<h3>Decorations</h3>
   		<table class="decorations">
   			<tbody>
