--- a/A2 site/products.html
+++ b/A2 site/products.html
@@ -47,7 +47,6 @@
 	
 <!-- InstanceBeginEditable name="content" -->
 <div id="fishproduct">
-	<div id="fishproducttransparent">
 	<div class="box firstblue">
 	  <h1>Product</h1></div>
 	
@@ -312,8 +311,9 @@
 </body>
 <footer>
 	<h1>© Fish-Tastic</h1>
-	<p>
-		
+	<p>83 Punggol Central Waterway Point #01-11, Singapore 828761 <br>
+	P: +65 6383 0111 <br>
+	E: enquires@fishtastic.com 
 	</p>
 </footer>
 <!-- InstanceEnd --></html>
