waiting for new flowchart

--- a/Milestone 1 - Project Plan/plan.html
+++ b/Milestone 1 - Project Plan/plan.html
@@ -44,7 +44,27 @@
 		<li>Homepage</li>
 		<li>About Us</li>
 		<li>FAQ</li>
-		<li>Products (include sub heads for type of product)</li>
+		<li>Products (include sub heads for type of product)
+			<ul>
+				<li>Fish
+					<ul>
+						<li>Freshwater Fish</li>
+						<li>Saltwater Fish</li>
+					</ul>
+				</li>
+				<li>Fish Supplies
+					<ul>
+						<li>Fish Food</li>
+						<li>Medication</li>
+					</ul>
+				</li>
+				<li>Eqiupment
+					<ul>
+						<li>Fish Tank</li>
+						<li>Decorations</li>
+					</ul>
+				</li>
+			</ul></li>
 		<li>Order form</li>
 		<li>Services (include the shipping info)</li>
 		<li>Announcement (include the new business info)</li>
@@ -61,7 +81,7 @@
 <ul>
     <li>For homepage <br><img src="doc1.jpg" width="700" height="" alt="firstdesign"/><br><img src="doc2.jpg" width="700" height="" alt="seconddesign"/></li>
     <li>For content - mainly navigation bar <br>
-    <img src="doc3.jpg" width="700" height="" alt=thirddesign""><br>
+    <img src="doc3.jpg" width="700" height="" alt="thirddesign"/><br>
     <img src="doc4.jpg" width="700" height="" alt="fourthdesign"/></li>
     <li>Text based design with its style <br>
     <img src="doc5.jpg" width="700" height="" alt="fifthdesign"/></li>
@@ -69,8 +89,8 @@
 <h2>Developed Pages</h2>
 <p>provide a link here to your developed pages</p>
 <ul>
-    <li>...</li>
-    <li>...</li>
+    <li><a href="products.html">Product Page</a></li>
+    <li><a href="aboutus.html">About Us Page</a></li>
 </ul>
 </body>
 </html>
