renew the navigation bar

--- a/A2 site/contactus.html
+++ b/A2 site/contactus.html
@@ -12,37 +12,35 @@
 </head>
 
 <body>
-<div id="navigation">
-	<div id="headertitle">
-  	<img src="images/Fish-Tastic%20logo.png" width="400" height="" alt="fishtastic logo"/>
-		</div>
-	<nav>
-		<ul>
-			<li><a href="index.html">Home</a></li>
-			<li><a href="aboutus.html">Fish-Tastic?!</a>
-				<ul>
-					<li><a href="aboutus.html#aboutus">About Us</a></li>
-					<li><a href="aboutus.html#faq">FAQ</a></li>
-				</ul>
-			</li>
-			<li><a href="products.html">Product</a>
-				<ul>
-					<li><a href="products.html#fish">Fish</a></li>
-					<li><a href="products.html#fishfood">Fish Supplies</a></li>
-					<li><a href="products.html#equipment">Equipment</a></li>
-				</ul>
-			</li>
-			<li><a href="orderform.html">Order Now</a></li>
-			<li><a href="services.html">Services</a></li>
-			<li><a href="announcements.html">Announcements</a>
-				<ul>
-				<li><a href="announcements.html#events">Event List</a></li>
-				</ul>
-			</li>
-			<li><a href="contactus.html">Contact Us</a></li>
-		</ul>
-	</nav>
-</div>
+<nav class="fixednavbar">
+	<ul>
+		<li><span>
+		<img src="images/Fish-Tasticsmalllogo.png" width="200" height="" alt=""/></span></li>
+		<li><a href="index.html">Home</a></li>
+		<li><a href="aboutus.html">Fish-Tastic?!</a>
+			<ul>
+				<li><a href="aboutus.html#aboutus">About Us</a></li>
+				<li><a href="aboutus.html#faq">FAQ</a></li>
+			</ul>
+		</li>
+		<li><a href="products.html">Product</a>
+			<ul>
+				<li><a href="products.html#fish">Fish</a></li>
+				<li><a href="products.html#fishfood">Fish Supplies</a></li>
+				<li><a href="products.html#equipment">Equipment</a></li>
+			</ul>
+		</li>
+		<li><a href="orderform.html">Order Now</a></li>
+		<li><a href="services.html">Services</a></li>
+		<li><a href="announcements.html">Announcements</a>
+			<ul>
+			<li><a href="announcements.html#events">Event List</a></li>
+			</ul>
+		</li>
+		<li><a href="contactus.html">Contact Us</a></li>
+	</ul>
+</nav>
+
 	
 	
 <!-- InstanceBeginEditable name="content" -->
@@ -50,6 +48,7 @@
 <p></p>
 <!-- InstanceEndEditable -->
 </body>
+
 <footer>
 	<h1>© Fish-Tastic</h1>
 	<p>83 Punggol Central Waterway Point #01-11, Singapore 828761 <br>
@@ -57,4 +56,5 @@
 	E: enquires@fishtastic.com 
 	</p>
 </footer>
+
 <!-- InstanceEnd --></html>
