--- a/A2 site/aboutus.html
+++ b/A2 site/aboutus.html
@@ -44,6 +44,7 @@
 	
 	
 <!-- InstanceBeginEditable name="content" -->
+<div id="content">
 <div id="aboutusbg">
 <div id="aboutus">
 	<h1>What is Fish-Tastic?!</h1>
@@ -99,7 +100,7 @@
 	Your fish need some "down time" just like you do. Sure, they don't crawl under the covers and go to sleep, but they do hunker down in a quiet place and rest at night.
 </div></div>
 </div>
-</div>
+</div></div>
 <!-- InstanceEndEditable -->
 </body>
 
