--- a/A2 site/announcements.html
+++ b/A2 site/announcements.html
@@ -44,9 +44,11 @@
 	
 	
 <!-- InstanceBeginEditable name="content" -->
-
-<p></p>
-<table align="center" id="events">
+<div id="content">
+	
+<div id="events">
+	<h2>Events</h2>
+	<table align="center">
   <tr>
     <th>Event</th>
     <th>Date</th>
@@ -96,6 +98,8 @@
     <td>20th September 2017</td>
   </tr>
 </table>
+</div>
+</div>
 <!-- InstanceEndEditable -->
 </body>
 
