--- a/A2 site/products.html
+++ b/A2 site/products.html
@@ -44,6 +44,7 @@
 	
 	
 <!-- InstanceBeginEditable name="content" -->
+<div id="content">
 <div id="fishproduct">
 	<div class="box firstblue">
 	  <h1>Product</h1></div>
@@ -466,7 +467,7 @@
 		  
 		</ul>
   	</div>
-</div>
+</div></div>
 <!-- InstanceEndEditable -->
 </body>
 
