--- a/A2 site/contactus.html
+++ b/A2 site/contactus.html
@@ -45,8 +45,9 @@
 	
 <!-- InstanceBeginEditable name="content" -->
 <div id="content">
-	<h2>Contact us</h2>
 	<div id="contactus">
+	<h2>Contact us</h2>
+		<a href="https://www.instagram.com/weare_fishtastic/"><img src="images/instagram-icon.png" alt="instagram icon"></a>
 		<p><b>Address:</b> 83 Punggol Central Waterway Point, Singapore 828761 #01-11</p>
 		<p><b>Contact number:</b> +65 6383 0111</p>
 		<p><b>Email:</b> <a href="mailto:enquires@fishtastic.com">enquires@fishtastic.com</a> (You should expect to hear a response within 1-2 working days)</p>
