--- a/A2 site/aboutus.html
+++ b/A2 site/aboutus.html
@@ -15,7 +15,7 @@
 <nav class="fixednavbar">
 	<ul>
 		<li><span>
-		<img src="images/Fish-Tasticsmalllogo.png" width="200" height="" alt=""/></span></li>
+		<img src="images/Fish-Tasticsmalllogo.png" width="200" height="" alt="fishTasticSmallLogo"/></span></li>
 		<li><a href="index.html">Home</a></li>
 		<li><a href="aboutus.html">Fish-Tastic?!</a>
 			<ul>
@@ -43,6 +43,7 @@
 
 	
 	
+
 <!-- InstanceBeginEditable name="content" -->
 <div id="content">
 <div id="aboutusbg">
@@ -102,6 +103,8 @@
 </div>
 </div></div>
 <!-- InstanceEndEditable -->
+
+
 </body>
 
 <footer>
