--- a/A2 site/products.html
+++ b/A2 site/products.html
@@ -294,7 +294,7 @@
 		  
 		  <li>
 			<a href="#generalCure"><img src="images/products/general cure.jpg" width="250" height="250" alt="generalCure" />
-			  <span class="textcaption"><span>API Pro Series: General Cure <br> $1.00/fish</span></span>
+			  <span class="textcaption"><span>API Pro Series: General Cure <br> $8.99</span></span>
 			</a>
 			<div id="generalCure" class="modalDialog">
 			<div>
@@ -306,7 +306,7 @@
 						<li>General Cure Anti-Parasitic Fish Medication treats a wide variety of parasitic diseases</li>
 						<li>For Both Freshwater & Saltwater</li>
   					</ul></p>
-				<h3>Price: $1.00/fish</h3>
+				<h3>Price: $8.99</h3>
 				</div>
 			</div>
 		  </li>
