--- a/A2 site/orderform.html
+++ b/A2 site/orderform.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8">
 <!-- InstanceBeginEditable name="doctitle" -->
-<title>Untitled Document</title>
+<title>Order form - Fishtastic</title>
 <!-- InstanceEndEditable -->
 <link href="css/mastercss.css" rel="stylesheet" type="text/css">
 <link href="css/content.css" rel="stylesheet" type="text/css">
@@ -45,8 +45,99 @@
 	
 
 <!-- InstanceBeginEditable name="content" -->
+<div id="content">
+	<form action="" method="post" onsubmit="" id="orderform" name="orderform">
+		<table>
+			<tbody>
+				<tr>
+					<td>First Name:</td>
+					<td><input name="firstname" type="text" required  id="firstname" size="20" maxlength="50"></td>
+				</tr>
+				<tr>
+					<td>Last Name:</td>
+					<td><input name="lastname" type="text" required  id="lastname" maxlength="50"></td>
+				</tr>
+				<tr>
+					<td>City:</td>
+					<td><input name="city" type="text" required id="city" maxlength="50"></td>
+				</tr>
+				<tr>
+					<td>Postal Code:</td>
+					<td><input name="postalcode" type="text" required id="postalcode"></td>
+				</tr>
+				<tr>
+					<td>Contact Number:</td>
+					<td><input name="contact" type="text" required id="contact"></td>
+				</tr>
+				<tr>
+					<td>Email Address:</td>
+					<td><input name="email" type="text" required id="email"></td>
+				</tr>
+				<tr><td> </td></tr>
+				<tr>
+					<td>Product Type:</td>
+					<td><select name="products" id="products" onChange="productType()">
+						<option value="freshwater">Freshwater Fish</option>
+						<option value="saltwater">Saltwater Fish</option>
+						<option value="fishfood">Fish Food</option>
+						<option value="medications">Medications</option>
+						<option value="fishtanks">Fish Tanks</option>
+						<option value="decorations">Decorations</option>
+				  </select></td>
+				</tr>
+				<tr>
+					<td>Product:</td>
+					<td>
+					<select name="freshwater" id="freshwater" onChange="productPrice()">
+						<option value="guppy">Guppy</option>
+						<option value="fgoldfish">Fantail Goldfish</option>
+						<option value="ogoldfish">Oranda Goldfish</option>
+						<option value="neontetra">Neon Tetra</option>
+					</select>
+					<select name="saltwater" id="saltwater" style="display:none" onChange="productPrice()">
+						<option value="clownfish">Clown Fish</option>
+						<option value="butterflyfish">Butterfly Fish</option>
+						<option value="angelfish">Angel Fish</option>
+						<option value="doryfish">Dory Fish</option>
+					</select>
+					<select name="fishfood" id="fishfood" style="display: none" onChange="productPrice()">
+						<option value="flakes">Tropical Flakes</option>
+						<option value="wafers">Algae Wafers</option>
+						<option value="bloodworms">Bloodworms</option>
+					</select>
+					<select name="medications" id="medications" style="display: none" onChange="productPrice()">
+						<option value="hexshield">Hex Shield 125g</option>
+						<option value="shell">Wonder Shell</option>
+						<option value="generalcure">General Cure</option>
+					</select>
+					<select name="fishtanks" id="fishtanks" style="display:none" onChange="productPrice()">
+						<option value="regulartank">Regular Fish Tank</option>
+						<option value="premiumtank">Premium Fish Tank</option>
+						<option value="fishbowl">Brandy Glass Fish Bowl</option>
+						<option value="waterpump">600 Rio Water Pump</option>
+					</select>
+					<select name="decorations" id="decorations" style="display:none" onChange="productPrice()">
+						<option value="waterplant">Artificial Water Plant</option>
+						<option value="corals">Artificial Corals</option>
+						<option value="castlehouse">Ceramic Castle House</option>
+					</select>
+					</td>
+				</tr>
+				<tr>
+					<td>Price of Product:</td>
+					<td>$<span id="price">0.80</span></td>
+				</tr>
+				<tr>
+					<td></td>
+					<td><input type="button" id="add" value="Add this product" onClick="addPrice()"></td>
+				</tr>
+			</tbody>
+		</table>
+		<input type="submit" id="submit" name="submit">
+	</form>
+</div>
 
-<p></p>
+<script src="script/script.js"></script>
 <!-- InstanceEndEditable -->
 
 
