made services.html

--- a/A2 site/services.html
+++ b/A2 site/services.html
@@ -46,7 +46,83 @@
 
 <!-- InstanceBeginEditable name="content" -->
 <div id="content">
+	<div id="serviceheader">
+		<h1>Services </h1>
+		
+		<a href="services.html#delivery"> <h2>Delivery <br>
+		<img src="images/TRUCK-icon-01.png" width="200" height="" alt="truckicon"/></h2></a>
+		
+		<a href="services.html#consultation"><h2>Consultation <br><br> <img src="images/consult.png" width="200" height="" alt="consulticon"/></h2></a>
+		
+		<a href="services.html#refund"><h2>Refund and Exchange
+		<br><br> <img src="images/refund.png" width="180" height="" alt="refundicon"/></h2></a>
+	</div>
 	
+	<div id="delivery" class="firstblue">
+		<h1>Delivery Service</h1>
+		<h2>
+			Free Delivery is applicable for you</h2> 
+         <img src="images/TRUCK-icon-01.png" width="200" height="" alt=truckicon""/>
+         <h3>Shop for more than S$100 and get the FREE DELIVERY</h3>
+         
+		<div class="transparentbox">
+		<p>Safe and Direct order <br> We will not do postage service</p>
+		
+		<p>Gurantee item's quality and correctness</p>
+		
+		<p>Arrives on your doorstep within 3-4 working days</p>
+		
+		<p>Pick your own preferred date and time for delivery</p>
+		
+		<p>Limited for Singapore area only</p>
+		
+		<p>Change your mind and we will still help you out. <br>
+		In case of product cancelling; we provide refund for orders within 2~3 days <br>
+		In case of delivery problem; we are responsible for the fee* <br>
+		In case of any other problem: <a href="contactus.html">Contact Us!</a></p>
+		</div>
+		
+		<h2>More Information</h2>
+		
+		<div class="transparentbox">
+		<p>Do not worry about the order confirmation. You will recieve it immedietly once you have done the payment. If you can not find it, check the junk/spam emails.</p>
+		<p>*If the first delivery attempt is not successful due to nonavailability of the recipient at the time of delivery, there will be no surcharges for the first re-delivery.</p>
+		<p>If we can not provide the item you have chosen. We will give options; to request for refund or to find substitute of your selection.</p>
+		</div>
+		
+	</div>
+	
+	<div id="consultation" class="secondblue">
+		<h1>Consultation</h1>
+		<img src="images/consult.png" width="200" height="" alt="consulticon"/>
+		
+		<div class="transparentbox">
+		<p> Let us meet you and we will help you to take care of your fishes!</p>
+		<p>How? <br> Easy, just request for our free consultation and we will come to aid you.** </p>
+		<p>Need more consultation? <br> Come visit us in our store or just call us
+		<br>
+		<a href="contactus.html">Contact Us Here</a></p>
+		
+		<p>**applicable only with online purchases</p>
+		</div>
+		
+	</div>
+	
+	<div id="refund" class="thirdblue">
+		<h1>Refund and Exchange Policy</h1>
+		<img src="images/refund.png" width="200" height="" alt="refundicon"/></h2>
+		
+		<div class="transparentbox">
+		<p>Items must be returned within 2 weeks with eligible reason and proof of purchase.</p>
+		
+		<p>Fishes are alive, guess you will not need refund for them. <br> Dead fish are not refundable.</p>
+		
+		<p>Supplies is not refundable unless it is sold in expiry date.</p>
+		
+		<p>Equipments must not be damaged by the buyer however, a defect from factory will be acceptable.</p>
+	</div>
+		
+	</div>
 </div>
 <!-- InstanceEndEditable -->
 
