progressing in announcement

--- a/A2 site/announcements.html
+++ b/A2 site/announcements.html
@@ -46,60 +46,91 @@
 
 <!-- InstanceBeginEditable name="content" -->
 <div id="content">
+	<div id="petshop">
+		
+	</div>
 	
-<div id="events">
-	<h2>Events</h2>
-	<table align="center">
-  <tr>
-    <th>Event</th>
-    <th>Date</th>
-  </tr>
-  <tr>
-    <td>Landscaping competition</td>
-    <td>30th November 2017</td>
-  </tr>
-  <tr>
-    <td>Fish Forum</td>
-    <td>5th October 2017</td>
-  </tr>
-  <tr>
-    <td>Fish exhibition</td>
-    <td>15th December 2017</td>
-  </tr>
-  <tr>
-    <td>Landscape &amp; Koi Pond exhibition</td>
-    <td>6th June 2017</td>
-  </tr>
-  <tr>
-    <td>Vet consultation service - FREE</td>
-    <td>15th November 2017</td>
-  </tr>
-  <tr>
-    <td>Puppies fashion show</td>
-    <td>1st January 2018</td>
-  </tr>
-  <tr>
-    <td>Pets fashion show</td>
-    <td>19th January 2018</td>
-  </tr>
-  <tr>
-    <td>Pets grooming services</td>
-    <td>8th August 2017</td>
-  </tr>
-  <tr>
-    <td>Puppy show with Animal Planet</td>
-    <td>20th August 2017</td>
-  </tr>
-  <tr>
-    <td>Pets grooming competition</td>
-    <td>9th December 2017</td>
-  </tr>
-  <tr>
-    <td>Special event with dog whisperer</td>
-    <td>20th September 2017</td>
-  </tr>
-</table>
-</div>
+	<div id="koi">
+		<p>Koi are domesticated carp, first bred for their markings and colorations in Japan in the early 1820s. </p>
+		
+		<p>The primary functions of a koi pond are:
+
+		<ul>
+		<li>Maximize fish health</li>
+		<li>Provide a beautiful water feature complimentary to the beauty of the koi.</li></ul>
+		
+		
+		Koi ponds are typically deeper than the average ornamental water garden.  The added depth:
+
+		Allows the koi to reach larger sizes and have both vertical as well as lateral swimming patterns.
+		Creates a safe zone beneath the reach of pond predators.
+		Maintains a more constant water temperature throughout the day.
+		Increases water volume greatly without increasing the “footprint” of the pond, thus increasing healthy fish holding capacity
+		koi-pond_waterfall-fish
+		Water quality is essential to maximizing fish health in a koi pond. </p>We recommend and install:
+
+		Aquadyne pressurized bead filters for biological and fine particulate filtration.
+		High volume, low head centrifugal pumps to economically recirculate the pond water.
+		UV sterilizers to maintain water clarity and reduce harmful protozoa in the water.
+		Living plant filters to assist with bio-filtration and “polish” the water.
+		Bottom suction to provide mixing of the water and remove excess fish waste buildup.
+		100_0088-e-t
+		As with all our water features, the appropriate presentation of a koi pond is vital. We can construct the koi pond to fit a budget or a style by using a variety of construction materials.  We can create a complete Japanese setting with our extensive Asian plant selection if you desire.</p>
+	</div>
+	
+	<div id="events">
+		<h2>Events</h2>
+		<table align="center">
+	  <tr>
+		<th>Event</th>
+		<th>Date</th>
+	  </tr>
+	  <tr>
+		<td>Landscaping competition</td>
+		<td>30th November 2017</td>
+	  </tr>
+	  <tr>
+		<td>Fish Forum</td>
+		<td>5th October 2017</td>
+	  </tr>
+	  <tr>
+		<td>Fish exhibition</td>
+		<td>15th December 2017</td>
+	  </tr>
+	  <tr>
+		<td>Landscape &amp; Koi Pond exhibition</td>
+		<td>6th June 2017</td>
+	  </tr>
+	  <tr>
+		<td>Vet consultation service - FREE</td>
+		<td>15th November 2017</td>
+	  </tr>
+	  <tr>
+		<td>Puppies fashion show</td>
+		<td>1st January 2018</td>
+	  </tr>
+	  <tr>
+		<td>Pets fashion show</td>
+		<td>19th January 2018</td>
+	  </tr>
+	  <tr>
+		<td>Pets grooming services</td>
+		<td>8th August 2017</td>
+	  </tr>
+	  <tr>
+		<td>Puppy show with Animal Planet</td>
+		<td>20th August 2017</td>
+	  </tr>
+	  <tr>
+		<td>Pets grooming competition</td>
+		<td>9th December 2017</td>
+	  </tr>
+	  <tr>
+		<td>Special event with dog whisperer</td>
+		<td>20th September 2017</td>
+	  </tr>
+	</table>
+	</div>
 </div>
 <!-- InstanceEndEditable -->
 
